# edmcoverlay_for_linux

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.903a8e5  Makefile  README.md  __init__.py  _config_vars.py  _edmcoverlay.py  _gui_builder.py  _logger.py  colors_mgr.h  create_binary.sh  drawables.h  edmcoverlay.py  load.py  opaque_ptr.h  overlay.cpp  overlay_manager.py  persistent_socket.py  send_test_strings_to_binary  socket.hh  validate_python_scripts  xoverlayoutput.cpp  xoverlayoutput.h
.github/: FUNDING.yml
cpp/: CMakeLists.txt  asio_accept_tcp_server.hpp  cm_ctors.h  colors_mgr.h  drawables.h  json_message.cc  json_message.hh  layer_out.h  logic_context.hpp  luna_default_fonts.h  main.cpp  main.cpp.orig  main.cpp.rej  managed_id.hpp  opaque_ptr.h  runners.h  socket.cc  socket.hh  strutils.h  svgbuilder.cpp  svgbuilder.h  tcp_session.hpp  x11_colors_mgr.h  xoverlayoutput.cpp  xoverlayoutput.h
cpp/cmake_incl/: asio.cmake  cpm_install.cmake  libraries.cmake  required_system_libraries.cmake
cpp/common/: CMakeLists.txt  cm_ctors.h  dummy.cpp  exec_exit.h  font_path_or_family.hpp  font_size.hpp  opaque_ptr.h  runners.h  strfmt.h  strutils.h  unicode_splitter.hpp
cpp/emoji_renderer/: CMakeLists.txt  emoji_renderer.cpp  emoji_renderer.hpp
helping_os_scripts/: send_cmd_to_overlay  test_emoji_output
